force-app/main/default/objects/Device_SmallCategory__c/Device_SmallCategory__c.object-meta.xml
<CustomObject>
    <label>細別</label>
    <nameField>
        <label>細別名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>