force-app/main/default/objects/Device_SmallCategory__c/fields/Device_SmallCategoryNo__c.field-meta.xml
<CustomField>
    <fullName>Device_SmallCategoryNo__c</fullName>
    <label>細別No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>