force-app/main/default/objects/Device_SmallCategory__c/fields/EquipmentCostExistence__c.field-meta.xml
<CustomField>
    <fullName>EquipmentCostExistence__c</fullName>
    <formula>TEXT(Device_MiddleCategory__r.Device_LargeCategory__r.ConstructionZone__r.Quote__r.EquipmentCostExistence__c )</formula>
    <label>機器管理費有無</label>
    <type>Text</type>
</CustomField>