force-app/main/default/objects/Device_SmallCategory__c/fields/GeneralAdministrativeExpensesCopy__c.field-meta.xml
<CustomField>
    <fullName>GeneralAdministrativeExpensesCopy__c</fullName>
    <formula>Device_MiddleCategory__r.Device_LargeCategory__r.ConstructionZone__r.Quote__r.GeneralAdministrativeExpensesPercent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>一般管理費率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>