force-app/main/default/objects/Device_SmallCategory__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <inlineHelpText>見積項目が複数ある場合は入力してください(空欄の場合は「1」として扱われます)</inlineHelpText>
    <label>数量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>