force-app/main/default/objects/Device_SmallCategory__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <formula>Device_MiddleCategory__r.Device_LargeCategory__r.ConstructionZone__r.Quote__r.Id</formula>
    <label>見積ID</label>
    <type>Text</type>
</CustomField>