force-app/main/default/objects/Device_SmallCategory__c/fields/SectionExistence__c.field-meta.xml
<CustomField>
    <fullName>SectionExistence__c</fullName>
    <formula>TEXT(Device_MiddleCategory__r.Device_LargeCategory__r.ConstructionZone__r.Quote__r.SectionExistence__c)</formula>
    <label>工区有無</label>
    <type>Text</type>
</CustomField>