force-app/main/default/objects/Device_SmallCategory__c/fields/TextDivision__c.field-meta.xml
<CustomField>
    <fullName>TextDivision__c</fullName>
    <label>部門(テキスト)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>