force-app/main/default/objects/Device_SmallCategory__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <inlineHelpText>見積項目が複数ある場合は入力してください（空欄の場合は「式」として扱われます）</inlineHelpText>
    <label>単位</label>
    <length>10</length>
    <type>Text</type>
</CustomField>